--- a/devfile.yaml
+++ b/devfile.yaml
@@ -11,6 +11,8 @@ components:
       cpuLimit: 2000m
       args: ['tail', '-f', '/dev/null']
       env:
+        - name: KUBEDOCK_ENABLED
+          value: "true"
         - name: 'ANSIBLE_COLLECTIONS_PATH'
           value: '~/.ansible/collections:/usr/share/ansible/collections:/projects/ansible-devspaces-demo/collections'
 commands:
