--- a/syntax_highlighting_demo.yml
+++ b/syntax_highlighting_demo.yml
@@ -3,7 +3,8 @@
 # This filename is excluded from ansible-lint so that the GitHub pipeline will pass.
 # Copy or rename this file to try ansible-lint and/or pre-commit.
 - name: Hello World Playbook
-  hosts: all
+  hosts: localhost
+  connection: local
   gather_facts: false
   tasks:
     - name: Print Hello World
